Still trying to fix logo issue on iOS

--- a/css/index.css
+++ b/css/index.css
@@ -273,9 +273,6 @@ header#masthead .container {
 }
 
 /* Logo */
-.logo-container {
-  display: inline-block;
-}
 .logo {
   font-family: var(--font-heading);
   color: var(--font-accent);
@@ -292,8 +289,7 @@ header#masthead .container {
   padding-bottom: 4px;
 }
 #logo-mark {
-  display: inline-block;
-  height: auto;
+  height: 38px;
   width: 28px;
   fill: url(#brand-gradient);
   margin-right: 16px;
